<resources>
    <string name="beat_dialog_title">Beat %1$s : </string>
    <plurals name="beat_dialog_title_plurals">
        <item quantity="one">undivided beat</item>
        <item quantity="other">split into parts</item>
    </plurals>
    <plurals name="beat_dialog_parts_plural">
        <item quantity="one">single part</item>
        <item quantity="other">%d parts</item>
    </plurals>
    <string name="beat_dialog_beat_type_label">%1$s %2$s</string>
    <plurals name="beat_dialog_beat_type_label_plurals">
        <item quantity="one"> </item>
        <item quantity="other">Part %d : </item>
    </plurals>
    <string name="beat_dialog_change_sound_volume_warning">Changes to sound/volume apply to all beats of the same type in the rhythm</string>
    <string name="beat_dialog_dont_show_warning">don\'t show warning again</string>
    <string name="beat_number_dialog_title">Beat Number</string>
    <string name="beat_number_dialog_full_beat_num_label">Number</string>
    <string name="beat_number_dialog_show_beat_num_label">Show as</string>
    <string name="copy_beat_dialog_title">Copy Beat %1$s to Other Beats</string>
    <string name="settingsKeep_screen_awake_while_playing_label">Keep screen on while playing a rhythm</string>
    <string name="settingsKeep_screen_awake_while_playing_summaryOn">Keep screen on</string>
    <string name="settingsKeep_screen_awake_while_playing_summaryOff">Don\'t keep screen on</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="info_abbr">i</string>
    <string name="remove_tag_from_search_button">Remove from search</string>
    <string name="help_menu">Help</string>
    <string name="remove_ads_menu">Upgrade to Premium</string>
    <string name="consent_ads_menu">Change consent for Ads</string>
    <string name="thanks_for_upgrading_title">Thank you!</string>
    <string name="thanks_for_upgrading_msg">Thank you for upgrading to premium!</string>
    <string name="nag_user_for_ads_title">Keep Ya Beat - Free Version</string>
    <string name="nag_user_for_ads_msg">You are using Keep Ya Beat free version, please enable internet for ads to show or upgrade to remove ads</string>
    <string name="checking_install">Checking Installation</string>
    <string name="loading">Loading</string>
    <string name="load_installing">Installing</string>
    <string name="loading_complete">Finished</string>
    <string name="system_low_memory_title">Low Memory</string>
    <string name="system_low_memory_body">The system is running low on memory.
        \n Keep Ya Beat is releasing all resources possible.</string>
    <string name="notification_playing_n_of_n">Playing %1$s/%2$s</string>
    <string name="notification_playing">Playing</string>
    <string name="notification_paused_n_of_n">Paused %1$s/%2$s</string>
    <string name="notification_paused">Paused</string>
    <string name="notification_action_play">Play</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_stop">Stop</string>
    <string name="audio_focus_unavailable_title">Audio unavailable</string>
    <string name="audio_focus_unavailable_body">Another app may be using audio, do you want to continue playing silently?</string>
    <string name="rhythms_search_hint">Search name&#8230;</string>
    <string name="rhythms_tags_search_hint">Search tags</string>
    <string name="rhythms_empty_list">No matching rhythms</string>
    <string name="setUniqueNameHint">Enter unique name</string>
    <string name="rhythms_tags_button">Tags</string>
    <string name="addNewTag">New tag</string>
    <string name="beatNumberLabelHint">Show</string>
    <string name="kyb_banner_desc">Keep Ya Beat banner with dancers and musical instruments</string>
    <string name="play_rhythm_img">Rhythm image</string>
    <string name="play_rhythm_backimg">Rhythm background image</string>
    <string name="play_button_img">Play button</string>
    <string name="pause_button_img">Pause button</string>
    <string name="stop_button_img">Stop button</string>
    <string name="bpm_button_img">BPM button</string>
    <string name="repeats_button_img">BPM button</string>
    <string name="kyb_logo_img">Keep Ya Beat logo</string>
    <string name="bpm_tapper_img">BPM tapper button</string>
    <string name="undo_button_img">Undo button</string>
    <string name="email_bug_report">Send report</string>
    <string name="bugReportSubmitDesc">Please tell us how the error happened here ...</string>
    <string name="error_calling_change_details">Could not load rhythm for changes, please submit a bug report</string>
    <string name="LOAD_FAILED_INVALID_FORMAT">Sound format not supported</string>
    <string name="welcomeHeading">Thank you for choosing Keep Ya Beat!</string>
    <string name="welcomeBody">
Much more than a metronome
\n
Play popular rhythms or make your own
    </string>
    <string name="UNEXPECTED_WRITE_FORMAT_ERROR">An unexpected error occurred during changes.
\n\nWe would really like to know about this because it should never happen! Please send us a bug report.
    </string>
    <string name="UNEXPECTED_PROGRAM_ERROR">Unexpected program error occurred.
\n\nWe would really like to know about this because it should never happen! Please send us a bug report.
    </string>
    <string name="non_critical_error_restart_activity">An unexpected non-critical error forced a restart. If problems persist please send us a bug report.</string>
    <string name="UNEXPECTED_SAVE_ERROR">Unexpected error occurred during changes.
\n\nThe operation could not complete due to a program error.
\n\nWe would really like to know about this because it should never happen! Please send us a bug report.
    </string>
    <string name="INTERMITTENT_BUG_ERROR">An unexpected but non-serious program error has occurred. 
\nIf all seems OK it\'s safe to continue. Otherwise please restart the app. 
\n\nWe would really like to know about this because it should never happen! Please send us a bug report.
	</string>
    <string name="beat_types_internal_data">Standard beat types</string>
    <string name="beat_types_user_data">My beat types</string>
    <string name="sounds_internal_data">Standard sounds</string>
    <string name="sounds_user_data">My custom sounds</string>
    <string name="delete_beat_type_migrate_title">Change references to \'%1$s\'</string>
    <string name="soundUriLoadedLabel">Sound loaded</string>
    <string name="changeRefBeatTypeLabel">Change to</string>
    <string name="delete_sound_migrate_title">Change references to \'%1$s\'</string>
    <string name="deleteBeatTypeRefs">Used by</string>
    <string name="soundUriHint">Locate sound</string>
    <string name="uriLabel">URI</string>
    <string name="allowed_format_label">Supported\nformat</string>
    <string name="allowed_format_desc">Wave PCM\nMono 22050Hz\nBit depth 16\nMax length 0.4 secs</string>
    <string name="open_chosen_sound_error">Unable to open file</string>
    <string name="open_chosen_sound_auth_error">Failed permission to open file</string>
    <string name="sound_file_compat_error_title">Sound File Error</string>
    <string name="sound_file_compat_error_format">File format is not supported</string>
    <string name="errorSoundFileLength">Sound is too long for a metronome (max 0.4 seconds)</string>
    <string name="rbtTableSoundError">Sound file error, play will use fallback sound. (Fix it in Beats &amp; Sounds)</string>
    <string name="beatTypesSoundError">Sound file error (Fix it in Sounds)</string>
    <string name="customSoundDeleteConfirm">Warning: to undo this deletion a new file must be attached</string>
    <string name="deleteSoundInvalidReferencesRhythms">Sound referenced by Rhythm(s), delete not allowed</string>
    <string name="menuSetNameRhythm">Change details</string>
    <string name="menuOpenRhythm">Open</string>
    <string name="menuEditRhythm">Edit</string>
    <string name="menuDeleteRhythm">Delete</string>
    <string name="menuCloneRhythm">Duplicate</string>
    <string name="saveRhythmLabel">Save rhythm</string>
    <string name="settingsToggleWelcomeLabel">Show welcome at startup</string>
    <string name="settingsRhythmPlayerHeadingLabel">Rhythm Beat Numbering</string>
    <string name="settingsToggleDrawBeatNumsAboveLabel">Place numbers above beats</string>
    <string name="settingsToggleDrawBeatNumsLabel">Show beat numbers</string>
    <string name="settingsToggleAnimateBeatsUpwardsLabel">Animate upwards</string>
    <string name="settingsToggleColourPlayedFullBeatsLabel">Tint played beats</string>
    <string name="settingsToggleColourPlayedSubBeatsLabel">Tint played part beats</string>
    <string name="settingsPlayedFullBeatsColourLabel">Tint colour</string>
    <string name="settingsPlayedSubBeatsColourLabel">Tint colour</string>
    <string name="settingsBeatMovementDistanceLabel">Movement distance</string>
    <string name="settingsBeatMovementDistanceTooltip">Slide to the right to move beats further</string>
    <string name="settingsBeatMovementSpeedLabel">Movement speed</string>
    <string name="settingsBeatMovementSpeedTooltip">Slide to the right to slow movement down</string>
    <string name="settingsToggleDrawBeatNumsAboveSummaryOn">Show above the beats (except in the rhythm editor)</string>
    <string name="settingsToggleDrawBeatNumsAboveSummaryOff">Show inside the beats</string>
    <string name="settingsToggleDrawBeatNumsSummaryOn">Show unless unset for a particular rhythm</string>
    <string name="settingsToggleDrawBeatNumsSummaryOff">Never show beat numbers</string>
    <string name="settingsToggleAnimateBeatsUpwardsSummaryOn">Move playing beats upwards</string>
    <string name="settingsToggleAnimateBeatsUpwardsSummaryOff">Move playing beats downwards</string>
    <string name="settingsToggleProgressIndSummaryOn">Show a bar to indicate play position</string>
    <string name="settingsToggleProgressIndSummaryOff">Don\'t show play position</string>
    <string name="settingsRedefaultButtonSummary">Clears all settings and resets to installation values</string>
    <string name="drawSilentPartBeatTitle">Show silent parts of split beats</string>
    <string name="drawSilentPartBeatSummary">A part that has no sound may be shown only when played, always or never</string>
    <string name="appMenuBeatsSounds">Beats &amp; Sounds</string>
    <string name="moduleTags">Tags</string>
    <string name="welcomeHelpLabel">Tour</string>
    <string name="welcomeToggleLabel">Show welcome next time</string>
    <string name="nameLabel">Name</string>
    <string name="fileLabel">File</string>
    <string name="testBtnLabel">Try it</string>
    <string name="newRhythm">New rhythm</string>
    <string name="settingsTitle">Settings</string>
    <string name="settingsPlayAnimationsHeadingLabel">Animations and Effects</string>
    <string name="settingsToggleAnimateBeatsLabel">Animate playing beats</string>
    <string name="settingsToggleBeatsKeepBouncingLabel">Playing beats keep bouncing</string>
    <string name="settingsToggleProgressIndLabel">Show playing progress</string>
    <string name="settingsRedefaultButtonLabel">Reset defaults</string>
    <string name="toggleRhythmsList">List rhythms</string>
    <string name="toggleRhythmBeatTypes">Rhythm beat type settings</string>
    <string name="quickEditTooltip">Magic wand, change number of beats</string>
    <string name="addChangeBeatTypeTooltip">Add or change a beat type</string>
    <string name="beatLenFullLabel">Full beat length</string>
    <string name="beatLenQuarterLabel">Quarter of a beat</string>
    <string name="beatLenThirdLabel">Third of a beat</string>
    <string name="beatLenHalfLabel">Half a beat</string>
    <string name="beatLen2ThirdsLabel">Two thirds of a beat</string>
    <string name="beatLen3QuartersLabel">Three quarters of a beat</string>
    <string name="NO_UNDO_DESC">Undo &lt;nothing to undo&gt;</string>
</resources>