<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:animateLayoutChanges="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/nameLabel"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/sound_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/setUniqueNameHint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="@integer/maxRhythmNameLen"
                    android:maxLines="1"/>
                <!-- max length of name, same as rhythm name seems ok for now -->

                <TextView
                    android:id="@+id/textLenIndicator"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sound_name"
                    android:layout_alignEnd="@+id/sound_name"
                    android:layout_alignRight="@+id/sound_name"
                    />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/file_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/fileLabel"
                />

            <Button
                android:id="@+id/uri_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soundUriHint"/>
        </TableRow>

        <TableRow
            android:id="@+id/test_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/testBtnLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/testBtnLabel"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/play_sound_btn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="Play a sound button"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_media_play" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/allowed_format_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/allowed_format_label"
                />

            <TextView
                android:id="@+id/allowed_format_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:text="@string/allowed_format_desc"
                />
        </TableRow>

    </TableLayout>

</ScrollView>